test/compile_fail/perfect_map_empty_keys.cpp
#include "frozenchars/perfect_map.hpp"

auto empty_map = frozenchars::PerfectMap<int>{};
